[tool.poetry]
name = "ros2-build-helper"
version = "0.1.0"
description = ""
authors = ["Taiga Arai <araitaiga2020.service@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
